--- a/aula-10/frontend.html
+++ b/aula-10/frontend.html
@@ -1,27 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulário Bootstrap com Axios</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"rel="stylesheet"/>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="frontend.js" defer></script>
-</head>
-<body>
-    <h1 class="text-center">Formulário</h1>
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="text-center mt-4">Formulário</h1>
 
+      <!-- Formulário de Cadastro -->
+      <div class="mb-3">
         <label for="nome" class="form-label">Nome</label>
-        <input type="text" class="form-control" id="nome" placeholder="Digite seu nome">
-        
+        <input
+          type="text"
+          class="form-control"
+          id="nome"
+          placeholder="Digite seu nome"
+        />
+      </div>
+      <div class="mb-3">
         <label for="idade" class="form-label">Idade</label>
-        <input type="text" class="form-control" id="idade" placeholder="Digite sua idade">
-        
-        <label for="profissao" class="form-label">profissão</label>
-        <input type="text" class="form-control" id="profissao" placeholder="Digite sua profissão">
+        <input
+          type="number"
+          class="form-control"
+          id="idade"
+          placeholder="Digite sua idade"
+        />
+      </div>
+      <div class="mb-3">
+        <label for="profissao" class="form-label">Profissão</label>
+        <input
+          type="text"
+          class="form-control"
+          id="profissao"
+          placeholder="Digite sua profissão"
+        />
+      </div>
+      <button type="button" class="btn btn-primary" id="btnSalvar">
+        Salvar
+      </button>
 
-        <button type="button" class="btn btn-primary" id="btnSalvar">Salvar</button>
+      <!-- Área para exibir mensagens -->
+      <div id="mensagem" class="mt-3"></div>
+      <hr />
 
-            <div id= "mensagem" class="mt-3"></div>
-    </body>
+      <!-- Campo para filtro de idade -->
+      <div class="mb-3">
+        <label for="filtroIdade" class="form-label"
+          >Filtrar por Idade (mínima)</label>
+
+        <!-- O evento onchange chama a função aplicarFiltro() sempre que o valor for alterado -->
+        <input
+          type="number"
+          class="form-control"
+          id="filtroIdade"
+          placeholder="Digite a idade mínima para filtrar"
+        />
+      </div>
+
+      <!-- Botão para carregar os dados -->
+      <button type="button" class="btn btn-info mt-3" id="btnCarregar">
+        Carregar Dados
+      </button>
+
+      <!-- Tabela para exibir os dados -->
+      <table
+        class="table table-striped mt-3"
+        id="tabelaDados"
+        style="display: none"
+      >
+        <thead>
+          <tr>
+            <th>ID</th>
+
+            <th>Nome</th>
+
+            <th>Idade</th>
+
+            <th>Profissão</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <!-- Linhas serão adicionadas dinamicamente -->
+        </tbody>
+      </table>
+    </div>
+  </body>
 </html>
